Update feature branch pattern in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,7 @@ on:
   push:
     branches:
       - develop
-      - feature
-      - 'feature/*'
+      - 'feature*'
 
 permissions:
   contents: read
